get newspaper names and search microfilms done
